[gd_scene load_steps=8 format=3 uid="uid://s2yign08bgnw"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_oarqk"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_e7e65"]
[ext_resource type="Script" uid="uid://gec5csno11xj" path="res://src/windows/sound_effects_window.gd" id="3_e7e65"]
[ext_resource type="Script" uid="uid://dk01nqct0h45o" path="res://src/windows/waveform.gd" id="4_ro71n"]
[ext_resource type="Texture2D" uid="uid://c8h1cdfugwtk7" path="res://assets/icons/player-play.svg" id="5_14u5g"]
[ext_resource type="Texture2D" uid="uid://banqkcj06qkj7" path="res://assets/icons/player-stop.svg" id="6_tl0lu"]
[ext_resource type="Texture2D" uid="uid://v8bmkjmutd7s" path="res://assets/icons/arrows-right.svg" id="7_b60c5"]

[node name="SoundEffectsWindow" instance=ExtResource("1_oarqk")]
theme = ExtResource("2_e7e65")
script = ExtResource("3_e7e65")
panel_corner_radius = 0

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
placeholder_text = "Search..."

[node name="VSplitContainer" type="VSplitContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogList" type="Tree" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VSplitContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/draw_guides = 0
columns = 2
hide_folding = true
hide_root = true

[node name="Waveform" type="Control" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VSplitContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_ro71n")

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Timer" type="Timer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/HSlider" index="0"]
unique_name_in_owner = true
wait_time = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
text = "All"
icon = ExtResource("5_14u5g")

[node name="StopButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
icon = ExtResource("6_tl0lu")

[node name="ShuffleButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("7_b60c5")

[node name="PlaylistLeft" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/SearchEdit" to="." method="_on_search_edit_text_changed"]
[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/VSplitContainer/DialogList" to="." method="_on_dialog_list_item_activated"]
[connection signal="timeout" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/HSlider/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="toggled" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/ShuffleButton" to="." method="_on_shuffle_button_toggled"]
